--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body {
     color: white;
 }
 
-* { 
+/* * { 
     border: 1px solid darkred; 
-}
+} */
 
 .everything_container {
     position: absolute;
@@ -18,11 +18,11 @@ body {
     justify-content: center;
     align-items: center;
     gap: 32px;
-    padding: 16px;
+    padding: 8px;
 }
 
 .header {
-    padding: 16px;
+    padding: 8px;
     font-size: 28px;
 }
 
@@ -38,16 +38,16 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 32px;
-    padding: 16px;
+    padding: 8px;
 }
 
 .game_container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 16px;
+    gap: 32px;
     padding: 8px;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
 }
 
